# juce_audio_visualizer

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/audioVISUAL/: PluginEditor.h  PluginProcessor.h
plugin/include/audioVISUAL/components/: HorizontalMeter.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
